lispbuilder-opengl/opengl/gl_1_3.lisp


(defcfun ("glMultiTexCoord1dvARB" glMultiTexCoord1dvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord1fARB" glMultiTexCoord1fARB) :void
  (target :unsigned-int)
  (s :float))

(defcfun ("glMultiTexCoord1fvARB" glMultiTexCoord1fvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord1iARB" glMultiTexCoord1iARB) :void
  (target :unsigned-int)
  (s :int))

(defcfun ("glMultiTexCoord1ivARB" glMultiTexCoord1ivARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord1sARB" glMultiTexCoord1sARB) :void
  (target :unsigned-int)
  (s :short))

(defcfun ("glMultiTexCoord1svARB" glMultiTexCoord1svARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord2dARB" glMultiTexCoord2dARB) :void
  (target :unsigned-int)
  (s :double)
  (t_arg2 :double))

(defcfun ("glMultiTexCoord2dvARB" glMultiTexCoord2dvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord2fARB" glMultiTexCoord2fARB) :void
  (target :unsigned-int)
  (s :float)
  (t_arg2 :float))

(defcfun ("glMultiTexCoord2fvARB" glMultiTexCoord2fvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord2iARB" glMultiTexCoord2iARB) :void
  (target :unsigned-int)
  (s :int)
  (t_arg2 :int))

(defcfun ("glMultiTexCoord2ivARB" glMultiTexCoord2ivARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord2sARB" glMultiTexCoord2sARB) :void
  (target :unsigned-int)
  (s :short)
  (t_arg2 :short))

(defcfun ("glMultiTexCoord2svARB" glMultiTexCoord2svARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord3dARB" glMultiTexCoord3dARB) :void
  (target :unsigned-int)
  (s :double)
  (t_arg2 :double)
  (r :double))

(defcfun ("glMultiTexCoord3dvARB" glMultiTexCoord3dvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord3fARB" glMultiTexCoord3fARB) :void
  (target :unsigned-int)
  (s :float)
  (t_arg2 :float)
  (r :float))

(defcfun ("glMultiTexCoord3fvARB" glMultiTexCoord3fvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord3iARB" glMultiTexCoord3iARB) :void
  (target :unsigned-int)
  (s :int)
  (t_arg2 :int)
  (r :int))

(defcfun ("glMultiTexCoord3ivARB" glMultiTexCoord3ivARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord3sARB" glMultiTexCoord3sARB) :void
  (target :unsigned-int)
  (s :short)
  (t_arg2 :short)
  (r :short))

(defcfun ("glMultiTexCoord3svARB" glMultiTexCoord3svARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord4dARB" glMultiTexCoord4dARB) :void
  (target :unsigned-int)
  (s :double)
  (t_arg2 :double)
  (r :double)
  (q :double))

(defcfun ("glMultiTexCoord4dvARB" glMultiTexCoord4dvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord4fARB" glMultiTexCoord4fARB) :void
  (target :unsigned-int)
  (s :float)
  (t_arg2 :float)
  (r :float)
  (q :float))

(defcfun ("glMultiTexCoord4fvARB" glMultiTexCoord4fvARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord4iARB" glMultiTexCoord4iARB) :void
  (target :unsigned-int)
  (s :int)
  (t_arg2 :int)
  (r :int)
  (q :int))

(defcfun ("glMultiTexCoord4ivARB" glMultiTexCoord4ivARB) :void
  (target :unsigned-int)
  (v :pointer))

(defcfun ("glMultiTexCoord4sARB" glMultiTexCoord4sARB) :void
  (target :unsigned-int)
  (s :short)
  (t_arg2 :short)
  (r :short)
  (q :short))

(defcfun ("glMultiTexCoord4svARB" glMultiTexCoord4svARB) :void
  (target :unsigned-int)
  (v :pointer))

(defconstant GL_MESA_trace 1)

(defconstant GL_TRACE_ALL_BITS_MESA #xFFFF)

(defconstant GL_TRACE_OPERATIONS_BIT_MESA #x0001)

(defconstant GL_TRACE_PRIMITIVES_BIT_MESA #x0002)

(defconstant GL_TRACE_ARRAYS_BIT_MESA #x0004)

(defconstant GL_TRACE_TEXTURES_BIT_MESA #x0008)

(defconstant GL_TRACE_PIXELS_BIT_MESA #x0010)

(defconstant GL_TRACE_ERRORS_BIT_MESA #x0020)

(defconstant GL_TRACE_MASK_MESA #x8755)

(defconstant GL_TRACE_NAME_MESA #x8756)

(defcfun ("glEnableTraceMESA" glEnableTraceMESA) :void
  (mask :unsigned-int))

(defcfun ("glDisableTraceMESA" glDisableTraceMESA) :void
  (mask :unsigned-int))

(defcfun ("glNewTraceMESA" glNewTraceMESA) :void
  (mask :unsigned-int)
  (traceName :pointer))

(defcfun ("glEndTraceMESA" glEndTraceMESA) :void)

(defcfun ("glTraceAssertAttribMESA" glTraceAssertAttribMESA) :void
  (attribMask :unsigned-int))

(defcfun ("glTraceCommentMESA" glTraceCommentMESA) :void
  (comment :pointer))

(defcfun ("glTraceTextureMESA" glTraceTextureMESA) :void
  (name :unsigned-int)
  (comment :pointer))

(defcfun ("glTraceListMESA" glTraceListMESA) :void
  (name :unsigned-int)
  (comment :pointer))

(defcfun ("glTracePointerMESA" glTracePointerMESA) :void
  (pointer :pointer)
  (comment :pointer))

(defcfun ("glTracePointerRangeMESA" glTracePointerRangeMESA) :void
  (first :pointer)
  (last :pointer)
  (comment :pointer))

(defconstant GL_MESA_packed_depth_stencil 1)

(defconstant GL_DEPTH_STENCIL_MESA #x8750)

(defconstant GL_UNSIGNED_INT_24_8_MESA #x8751)

(defconstant GL_UNSIGNED_INT_8_24_REV_MESA #x8752)

(defconstant GL_UNSIGNED_SHORT_15_1_MESA #x8753)

(defconstant GL_UNSIGNED_SHORT_1_15_REV_MESA #x8754)

(defconstant GL_MESA_program_debug 1)

(defconstant GL_FRAGMENT_PROGRAM_POSITION_MESA #x8bb0)

(defconstant GL_FRAGMENT_PROGRAM_CALLBACK_MESA #x8bb1)

(defconstant GL_FRAGMENT_PROGRAM_CALLBACK_FUNC_MESA #x8bb2)

(defconstant GL_FRAGMENT_PROGRAM_CALLBACK_DATA_MESA #x8bb3)

(defconstant GL_VERTEX_PROGRAM_POSITION_MESA #x8bb4)

(defconstant GL_VERTEX_PROGRAM_CALLBACK_MESA #x8bb5)

(defconstant GL_VERTEX_PROGRAM_CALLBACK_FUNC_MESA #x8bb6)

(defconstant GL_VERTEX_PROGRAM_CALLBACK_DATA_MESA #x8bb7)

(defcfun ("glProgramCallbackMESA" glProgramCallbackMESA) :void
  (target :unsigned-int)
  (callback :pointer)
  (data :pointer))

(defcfun ("glGetProgramRegisterfvMESA" glGetProgramRegisterfvMESA) :void
  (target :unsigned-int)
  (len :int)
  (name :pointer)
  (v :pointer))

(defconstant GL_ATI_blend_equation_separate 1)

(defconstant GL_ALPHA_BLEND_EQUATION_ATI #x883D)

(defcfun ("glBlendEquationSeparateATI" glBlendEquationSeparateATI) :void
  (modeRGB :unsigned-int)
  (modeA :unsigned-int))


